cititechdNew2024Jan/force-app/main/default/objects/Product_Account_Information__c/Product_Account_Information__c.object-meta.xml
<CustomObject>
    <label>Product Account Information</label>
    <nameField>
        <displayFormat>ProdAccInfo{000000000}</displayFormat>
        <label>Product Account Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Account Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>