cititechdNew2024Jan/force-app/main/default/objects/Product_Account_Information__c/fields/Business_Line__c.field-meta.xml
<CustomField>
    <fullName>Business_Line__c</fullName>
    <label>Business Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Services</fullName>
            </value>
            <value>
                <fullName>OE Conference</fullName>
            </value>
            <value>
                <fullName>OE Connect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>