cititechdNew2024Jan/force-app/main/default/objects/Product_Account_Information__c/fields/Income_Account__c.field-meta.xml
<CustomField>
    <fullName>Income_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Income Account</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>