cititechdNew2024Jan/force-app/main/default/objects/Product_Account_Information__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Account Information</relationshipLabel>
    <relationshipName>Product_Account_Information</relationshipName>
    <type>Lookup</type>
</CustomField>