cititechdNew2024Jan/force-app/main/default/objects/Product_Account_Information__c/fields/SyncToNetsuite__c.field-meta.xml
<CustomField>
    <fullName>SyncToNetsuite__c</fullName>
    <label>SyncToNetsuite</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>