cititechdNew2024Jan/force-app/main/default/objects/Product_Account_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Income_Account__c</columns>
    <columns>Revenue_Account__c</columns>
    <columns>Business_Line__c</columns>
    <columns>SyncToNetsuite__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>